[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://UI/Templates/HUDOverlay.gd" id="1"]

[node name="HUDOverlay" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LeftColumn" type="VBoxContainer" parent="Root"]
anchor_right = 0.3
anchor_bottom = 0.3
offset_left = 16.0
offset_top = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Objective" type="Label" parent="Root/LeftColumn"]
size_flags_horizontal = 3
text = "Objective:"

[node name="Status" type="Label" parent="Root/LeftColumn"]
size_flags_horizontal = 3
text = "Status"

[node name="RightColumn" type="VBoxContainer" parent="Root"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.3
offset_right = -16.0
offset_top = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0

[node name="Notifications" type="VBoxContainer" parent="Root/RightColumn"]
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="BottomColumn" type="VBoxContainer" parent="Root"]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bars" type="VBoxContainer" parent="Root/BottomColumn"]
size_flags_horizontal = 3
size_flags_vertical = 3

